--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@web-std/file": "^3.0.3",
     "auth0": "^4.3.1",
+    "axios": "^1.6.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.5.0",
     "express-jwt": "^8.4.1",
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^3.1.0",
