--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,11 +4,14 @@ FROM node:21-alpine
 # Set working directory
 WORKDIR /app/client
 
-# Copy the client application
-COPY . .
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
 # Install dependencies
 RUN npm install
+
+# Copy the rest of the client application
+COPY . .
 
 # Build the client app
 RUN npm run build
