--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "express-jwt": "^8.4.1",
     "express-jwt-authz": "^2.4.1",
     "jwks-rsa": "^3.1.0",
-    "nodemon": "^3.1.0"
+    "mysql2": "^3.9.7",
+    "nodemon": "^3.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "sass": "^1.72.0"
