Revert "Update codeql.yml"
This reverts commit dab2c3b32d6860f22aeffca0c22dacd90666158a.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,9 +13,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "1.0-stable" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "1.0-stable" ]
+    branches: [ "main" ]
   schedule:
     - cron: '34 9 * * 4'
 
