--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.5.0",
     "express-jwt": "^8.4.1",
     "express-jwt-authz": "^2.4.1",
+    "express-rate-limit": "^7.2.0",
     "jwks-rsa": "^3.1.0",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
