--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,19 @@
     "@auth0/auth0-vue": "^2.3.3",
     "axios": "^1.6.8",
     "is-ip": "^5.0.1",
+    "npm-check-updates": "^16.14.20",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "json-server": "^0.17.0",
-    "prettier": "^2.5.1",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.2.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "json-server": "^1.0.0-alpha.23",
+    "prettier": "^3.2.5",
     "sass": "^1.72.0",
-    "vite": "^2.9.9"
+    "vite": "^5.2.11"
   }
 }
