Changed vite build
Changed vite build from cjs to esm

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "progetto_srs_client",
+  "type": "module",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --host 0.0.0.0 --port 4040",
