--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,17 +4,11 @@ FROM node:21-alpine
 # Set working directory
 WORKDIR /app/client
 
-# Copy package.json and package-lock.json
-COPY ./client/package* .
+# Copy the application
+COPY ./client .
 
 # Install dependencies
 RUN npm install
-
-# Copy the rest of the client application
-COPY ./client .
-
-# Build the client app
-RUN npm run build
 
 # Expose the port the client will run on
 EXPOSE 4040
