--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,11 +4,17 @@ FROM node:21-alpine
 # Set working directory
 WORKDIR /app/client
 
-# Copy the application
-COPY ./client .
+# Copy package.json and package-lock.json
+COPY ./client/package* .
 
 # Install dependencies
 RUN npm install
+
+# Copy the rest of the client application
+COPY ./client .
+
+# Build the client app
+RUN npm run build
 
 # Expose the port the client will run on
 EXPOSE 4040
