--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # Use a lightweight Node.js image
-FROM node:21-alpine
+FROM node:21-alpine as build-stage
 
 # Set working directory
 WORKDIR /app/client
@@ -16,8 +16,12 @@ COPY ./client .
 # Build the client app
 RUN npm run build
 
+FROM nginx:stable-alpine as production-stage
+
+COPY --from=build-stage /app/client/dist/usr/share/nginx/html
+
 # Expose the port the client will run on
 EXPOSE 4040
 
 # Command to start the client in development mode
-CMD ["npm", "run", "dev"]
+CMD ["nginx", "-g", "daemon off;"]
