--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,7 +18,7 @@ RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 
-COPY --from=build-stage /app/client/dist/usr/share/nginx/html
+COPY --from=build-stage /app/client/dist /usr/share/nginx/html
 
 # Expose the port the client will run on
 EXPOSE 4040
