--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,7 +18,7 @@ RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=build-stage /app/client/nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=build-stage /app/client/dist /usr/share/nginx/html
 
