--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,50 +1,30 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
-
+worker_processes  1;
 
 events {
     worker_connections  1024;
 }
 
-
-
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Logging settings
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Performance tuning
-    keepalive_timeout 65;
-
-    # Gzip Compression
-    gzip on;
-    gzip_disable "msie6";
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header Content-Security-Policy "default-src 'self'";
-
-    # SSL Configuration
-    # ssl_certificate /etc/ssl/certs/your_domain_name.pem; # managed by Certbot
-    # ssl_certificate_key /etc/ssl/private/your_domain_name.key; # managed by Certbot
+    sendfile        on;
+    keepalive_timeout  65;
 
     server {
         listen 4040;
-        server_name localhost; # Change this to your domain or IP
+        server_name localhost;
 
-        root /usr/share/nginx/html; # Path to your Vue app's 'dist' directory
+        root /usr/share/nginx/html;
         index index.html;
 
         location / {
             try_files $uri $uri/ /index.html;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
         }
     }
 }
