--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,22 @@
 # Use a lightweight Node.js image
 FROM node:21-alpine
 
-RUN npm install -g http-server
+# Accept build-time enviroment variables
+ARG VITE_API_SERVER_URL
+ARG VITE_AUTH0_DOMAIN
+ARG VITE_AUTH0_CLIENT_ID
+ARG VITE_AUTH0_CALLBACK_URL
+ARG VITE_AUTH0_AUDIENCE
+
+# Set the enviroment variables
+ENV VITE_API_SERVER_URL=${VITE_API_SERVER_URL}
+ENV VITE_AUTH0_DOMAIN=${VITE_AUTH0_DOMAIN}
+ENV VITE_AUTH0_CLIENT_ID=${VITE_AUTH0_CLIENT_ID}
+ENV VITE_AUTH0_CALLBACK_URL=${VITE_AUTH0_CALLBACK_URL}
+ENV VITE_AUTH0_AUDIENCE=${VITE_AUTH0_AUDIENCE}
+
+# Install serve to deploy production version of the app
+RUN npm install -g serve
 
 # Set working directory
 WORKDIR /app/client
@@ -21,5 +36,5 @@ RUN npm run build
 # Expose the port the client will run on
 EXPOSE 4040
 
-# Command to start the client in development mode
-CMD ["http-server", "dist", "-p 4040"]
+# Command to start the client in production mode
+CMD ["serve", "-s", "dist", "-p", "4040"]
