--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -35,15 +35,12 @@ COPY ./client .
 # Build the client app
 RUN npm run build
 
-RUN echo "$CLIENT_SSL_CERT"
-RUN echo "$CLIENT_SSL_KEY"
-
 # Create SSL key and cert files
-RUN echo "$CLIENT_SSL_CERT" | base64 -d > /app/client/cert.pem
-RUN echo "$CLIENT_SSL_KEY" | base64 -d > /app/client.key.pem
+RUN echo "$CLIENT_SSL_CERT" | base64 -d > ssl_cert.pem
+RUN echo "$CLIENT_SSL_KEY" | base64 -d > ssl_key.pem
 
 # Expose the port the client will run on
 EXPOSE 4040
 
 # Command to start the client in production mode
-CMD ["serve", "-s", "dist", "-p", "4040", "--ssl-cert", "/app/client/cert.pem", "--ssl-key", "/app/client/key.pem"]
+CMD ["serve", "-s", "dist", "-p", "4040", "--ssl-cert", "ssl_cert.pem", "--ssl-key", "ssl_key.pem"]
