--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,6 +32,8 @@ jobs:
             --build-arg VITE_AUTH0_AUDIENCE=${{ secrets.VITE_AUTH0_AUDIENCE }} \
             --build-arg CLIENT_SSL_CERT=${{ secrets.CLIENT_SSL_CERT }} \
             --build-arg CLIENT_SSL_KEY=${{ secrets.CLIENT_SSL_KEY }} \
+            --build-arg SERVER_SSL_CERT=${{ secrets.SERVER_SSL_CERT }} \
+            --build-arg SERVER_SSL_KEY=${{ secrets.SERVER_SSL_KEY }} \
             -f ./client/Dockerfile .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/client_db:latest
 
