--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,11 @@
 # Use a lightweight Node.js image
 FROM node:21-alpine
 
+
+# Accept build-time enviroment variables
+ARG SERVER_SSL_CERT
+ARG SERVER_SSL_KEY
+
 # Set working directory
 WORKDIR /app/server
 
@@ -15,6 +20,11 @@ RUN npm install node-fetch
 
 # Copy the rest of the server application
 COPY ./server .
+
+
+# Create SSL key and cert files
+RUN echo "$SERVER_SSL_CERT" | base64 -d > cert.pem
+RUN echo "$SERVER_SSL_KEY" | base64 -d > key.pem
 
 # Expose the port the server will run on
 EXPOSE 8000
