--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,6 @@
 # Use a lightweight Node.js image
 FROM node:21-alpine
 
-
 # Accept build-time enviroment variables
 ARG SERVER_SSL_CERT
 ARG SERVER_SSL_KEY
@@ -22,8 +21,8 @@ RUN npm install node-fetch
 COPY ./server .
 
 # Create SSL key and cert files
-RUN echo -e "$SERVER_SSL_CERT" | base64 -d > cert.pem
-RUN echo -e "$SERVER_SSL_KEY" | base64 -d > key.pem
+RUN echo "$SERVER_SSL_CERT" | base64 -d > cert.pem
+RUN echo "$SERVER_SSL_KEY" | base64 -d > key.pem
 
 # Expose the port the server will run on
 EXPOSE 8000
