--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.5.0",
